estructura html i logo

--- a/HTML/Projecte.html
+++ b/HTML/Projecte.html
@@ -5,9 +5,80 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../CSS/styles.css">
-
 </head>
 <body>
-    
+    <header>
+        <img src="../Fotos/logo.png" alt="Aventura Nautica">
+        <h1>Aventura Nautica</h1>
+        <nav>
+            <ul>
+                <li><a href="">Inicio</a></li>
+                <li><a href="">Experiencias</a></li>
+                <li><a href="">Servicios</a></li>
+                <li><a href="">Galería</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section id="inicio">
+            <h2>BENVINGUTS</h2>
+        </section>
+                
+        <section id="experiencias">
+            <h2>EXPERIÈNCIES</h2>
+            <div id="excursions_vaixell" >
+                <h3>Excursions amb vaixell</h3>
+            </div>
+
+            <div id="busseig_recreatiu">
+                <h3>Busseig recreatiu</h3>
+            </div>
+
+            <div id="pesca_esportiva">
+                <h3>Pesca esportiva</h3>
+            </div>
+
+            <div id="capvespre_veler">
+                <h3>Capvespre en veler</h3>
+            </div>
+        </section>
+
+        <section id="servicios">
+            <h2>SERVEIS</h2>
+            <div id="lloguer_vaixells">
+                <h3>Lloguer d'embarcacions</h3>
+            </div>
+            <div id="formacio_nautica" >
+                <h3>Formacio Nautica</h3>
+            </div>
+            <div id="manteniment_vaixells">
+            <h3>Manteniment i reparació</h3>
+            </div>
+        </section>
+                <section id="galeria">
+            <h2>GALERIA</h2>
+            <div>
+                <!--
+                <img src="">
+                <img src="">
+                <img src="">
+                <img src=""> 
+                -->
+            </div>
+        </section>
+    </main>
+    <footer>
+            <section id="contacto">
+            <h2>Contacto</h2>
+        </section>
+        <section id="redes-sociales">
+            <h2>Síguenos</h2>
+        </section>
+        <section id="nom-logo">
+            <img src="../Fotos/logo.png" alt="Aventura Nautica">
+            <h1>Aventura Nautica</h1>
+        </section>
+    </footer>
 </body>
 </html>
