footer html acabat

--- a/HTML/Projecte.html
+++ b/HTML/Projecte.html
@@ -118,9 +118,15 @@
     <footer>
         <section id="contacto">
             <h2>Contacto</h2>
+            <p>Email: aventura@nautica.com</p>
+            <p>Teléfono: +34 123 456 789</p>
+            <p>Dirección: Calle del Mar, 123, Ciudad, País</p>
         </section>
         <section id="redes-sociales">
             <h2>Síguenos</h2>
+            <a href="https://www.facebook.com/?locale=es_ES" target="_blank">Facebook</a> | <a
+                href="https://www.instagram.com/" target="_blank">Instagram</a> | <a href="https://x.com/?lang=es"
+                target="_blank">Twitter</a>
         </section>
         <section id="nom-logo">
             <img src="../Fotos/logo.png" alt="Aventura Nautica">
